<resources>
    <string name="app_name">Pokedéx</string>
    <string name="pokedex">Pokedéx</string>
    <string name="entrar">Entrar</string>
    <string name="pikachu_correndo">Pikachu Correndo</string>
    <string name="carregando">Carregando</string>
    <string name="title_activity_listas">Listas de Pokémons</string>
    <string name="tab_title_1">1a Geracao</string>
    <string name="tab_title_2">2a Geracao</string>
    <string name="tab_title_3">3a Geracao</string>
    <string name="tab_title_4">4a Geracao</string>
    <string name="tab_title_5">5a Geracao</string>
    <string name="tab_title_6">6a Geracao</string>
    <string name="tab_title_7">7a Geracao</string>
    <string name="tab_title_8">8a Geracao</string>
    <string name="tab_title_9">Tipos</string>
    <string name="pokemon">Pokémon</string>
    <string name="tipo_2">Tipo 2</string>
    <string name="tipo_1">Tipo 1</string>
    <string name="title_activity_detalhes_pokemon">Detalhes Pokémon</string>
    <string name="action_settings">Settings</string>

    <string name="altura">Altura</string>
    <string name="peso">Peso</string>
    <string name="pokedex_logo_dourado">Pokédex Logo Dourado</string>

    <string-array name="lista_tipos">
        <item name="bug">Bug</item>
        <item name="dark">Dark</item>
        <item name="dragon">Dragon</item>
        <item name="electric">Electric</item>
        <item name="fairy">Fairy</item>
        <item name="fighting">Fighting</item>
        <item name="fire">Fire</item>
        <item name="flying">Flying</item>
        <item name="ghost">Ghost</item>
        <item name="grass">Grass</item>
        <item name="ground">Ground</item>
        <item name="ice">Ice</item>
        <item name="normal">Normal</item>
        <item name="poison">Poison</item>
        <item name="psychic">Psychic</item>
        <item name="rock">Rock</item>
        <item name="steel">Steel</item>
        <item name="water">Water</item>
    </string-array>

    <string name="bug">Bug</string>
    <string name="dark">Dark</string>
    <string name="dragon">Dragon</string>
    <string name="electric">Electric</string>
    <string name="fairy">Fairy</string>
    <string name="fighting">Fighting</string>
    <string name="fire">Fire</string>
    <string name="flying">Flying</string>
    <string name="ghost">Ghost</string>
    <string name="grass">Grass</string>
    <string name="ground">Ground</string>
    <string name="ice">Ice</string>
    <string name="normal">Normal</string>
    <string name="poison">Poison</string>
    <string name="psychic">Psychic</string>
    <string name="rock">Rock</string>
    <string name="steel">Steel</string>
    <string name="water">Water</string>

    <string name="icone_ver_mais">Ícone Ver Mais</string>
    <string name="icone_tipo">Ícone Tipo</string>
    <string name="tipo">Tipo:</string>
    <string name="obtendo_dados_de_pok_mons_n_naguarde_um_instante">Obtendo dados de pokémons...\n\nAguarde um instante.</string>
</resources>