<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/ll_background"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".ui.activity.DetalhesPokemonActivity">

        <ImageView
            android:id="@+id/iv_pokemon"
            android:layout_width="280dp"
            android:layout_height="280dp"
            android:layout_gravity="center"
            android:layout_margin="20dp"
            android:contentDescription="@string/pokemon" />

        <TextView
            android:id="@+id/tv_pokemon_description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@android:color/white"
            android:textSize="20sp" />

        <LinearLayout
            android:id="@+id/ll_types"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:layout_gravity="center"
            android:gravity="center"
            android:orientation="horizontal">

            <LinearLayout
                android:id="@+id/ll_type_1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:gravity="center"
                android:orientation="vertical"
                tools:ignore="UseCompoundDrawables">

                <ImageView
                    android:id="@+id/iv_type_1"
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:contentDescription="@string/tipo_1" />

                <TextView
                    android:id="@+id/tv_type_1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAlignment="center"
                    android:textColor="@android:color/white"
                    android:textSize="14sp" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/ll_type_2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:gravity="center"
                android:visibility="gone"
                android:orientation="vertical"
                tools:ignore="UseCompoundDrawables">

                <ImageView
                    android:id="@+id/iv_type_2"
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:contentDescription="@string/tipo_2" />

                <TextView
                    android:id="@+id/tv_type_2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAlignment="center"
                    android:textColor="@android:color/white"
                    android:textSize="14sp" />

            </LinearLayout>

        </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_weight_height"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:layout_gravity="center"
        android:gravity="center"
        android:orientation="horizontal">

        <LinearLayout
            android:id="@+id/ll_weight"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:gravity="center"
            android:orientation="vertical"
            tools:ignore="UseCompoundDrawables">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:src="@drawable/ic_weight"
                android:contentDescription="@string/peso" />

            <TextView
                android:id="@+id/tv_weight"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:textColor="@android:color/white"
                android:textSize="14sp"
                android:visibility="gone" />

            <ProgressBar
                android:id="@+id/pb_loading_weight"
                android:layout_width="36dp"
                android:layout_height="36dp" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_height"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:gravity="center"
            android:orientation="vertical"
            tools:ignore="UseCompoundDrawables">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:src="@drawable/ic_height"
                android:contentDescription="@string/altura" />

            <TextView
                android:id="@+id/tv_height"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:textColor="@android:color/white"
                android:textSize="14sp"
                android:visibility="gone" />

            <ProgressBar
                android:id="@+id/pb_loading_height"
                android:layout_width="36dp"
                android:layout_height="36dp" />

        </LinearLayout>

    </LinearLayout>

</LinearLayout>