<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/ll_item_pokemon"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:weightSum="10"
    android:padding="5dp"
    android:baselineAligned="true">

    <LinearLayout
        android:id="@+id/ll_sprite"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        tools:ignore="UseCompoundDrawables">

        <ImageView
            android:id="@+id/iv_sprite"
            android:layout_width="64dp"
            android:layout_height="64dp"
            android:contentDescription="@string/pokemon" />

        <TextView
            android:id="@+id/tv_number"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="2dp"
            android:textSize="8sp"
            tools:ignore="SmallSp" />

        <ImageView
            android:id="@+id/iv_gotcha"
            android:visibility="gone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:src="@drawable/ic_gotcha_disabled"
            android:contentDescription="@string/pokemon" />

    </LinearLayout>


    <LinearLayout
        android:id="@+id/ll_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_weight="8"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/tv_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:layout_gravity="center" />

    </LinearLayout>


    <LinearLayout
        android:id="@+id/ll_types"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="end"
        android:layout_weight="2"
        android:orientation="horizontal" >

        <LinearLayout
            android:id="@+id/ll_type_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:gravity="center"
            android:orientation="vertical"
            tools:ignore="UseCompoundDrawables">

            <ImageView
                android:id="@+id/iv_type_1"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:contentDescription="@string/tipo_1" />

            <TextView
                android:id="@+id/tv_type_1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:textSize="8sp"
                tools:ignore="SmallSp" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_type_2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:gravity="center"
            android:orientation="vertical"
            tools:ignore="UseCompoundDrawables">

            <ImageView
                android:id="@+id/iv_type_2"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:contentDescription="@string/tipo_2" />

            <TextView
                android:id="@+id/tv_type_2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:textSize="8sp"
                tools:ignore="SmallSp" />

        </LinearLayout>

    </LinearLayout>

</LinearLayout>